--- a/index.html
+++ b/index.html
@@ -10,36 +10,7 @@
 
 <body>
     <h1>Jogo da Velha</h1>
-
-    <div>
-        <div id="1" class="quadrado">-</div>
-        <div id="2" class="quadrado">-</div>
-        <div id="3" class="quadrado">-</div>
-    </div>
-    <div>
-        <div id="4" class="quadrado">-</div>
-        <div id="5" class="quadrado">-</div>
-        <div id="6" class="quadrado">-</div>
-    </div>
-    <div>
-        <div id="7" class="quadrado">-</div>
-        <div id="8" class="quadrado">-</div>
-        <div id="9" class="quadrado">-</div>
-    </div>
-
-    <div class="jogador">
-        <label>Jogador:</label>
-        <label id="jogador-selecionado"></label>
-    </div>
-
-    <div class="vencedor">
-        <label>Vencedor:</label>
-        <label id="vencedor-selecionado"></label>
-    </div>
-
-    <div>
-        <button onclick="reiniciar()">Reiniciar</button>
-    </div>
+    <Game id="Game"></Game>
 
     <script src="velha.js"></script>
 </body>
